kubernetes/gcp-examples/05-stateful-sets/01-service.yaml
# Headless Service for StatefulSet Pod DNS names
apiVersion: v1
kind: Service
metadata:
  name: tkb-sts
  labels:
    app: web
spec:
  ports:
  - port: 80
    name: web
  type: NodePort
  selector:
    app: web
